CSRF_TRUSTED_ORIGINS

--- a/base/.env
+++ b/base/.env
@@ -1,4 +1,4 @@
 DJANGO_SECRET_KEY="django-insecure-m(ywbpqt-6nesl4(@btb)fx$md^!ll58b7*-(6*vbuia#sdo$e"
 DJANGO_DEBUG=True
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,saraweb-epkj.onrender.com
 DATABASE_URL=postgres://user:password@localhost:5432/mydatabase
